--- a/Code/Classic Games Server/Server/.classpath
+++ b/Code/Classic Games Server/Server/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/usuario/Classic-Games/Code/Classic Games Server/jansi-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
